--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,59 +1,103 @@
+@font-face {
+    font-family: Akronim;
+    src: url(Akronim-Regular.ttf);
+}
+@font-face {
+    font-family: Laila;
+    src: url(Laila-Light.ttf);
+}
 html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
-margin: 0;
-padding: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-  display: block;
-  overflow: auto;
-}
-
-body {
-background-image: url(World_of_Wikipedia_by_Jon_Robson_-_colored_version.png);
-background-size: cover
-
-}
-	#search{
-		float:right;
-		padding:20px;
-	}
-	#text{
-		margin: 0;
-		padding: 5px 15px;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size:14px;
-		color:#666;
-		border:1px solid #0076a3; border-right:0px;
-		border-top-left-radius: 5px 5px;
-		border-bottom-left-radius: 5px 5px;
-	}
-
-
-#button {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
     margin: 0;
-    padding: 5px 7px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:14px;
-    font-weight:bold;
+    padding: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    display: block;
+    overflow: auto;
+}
+body {
+    background-image: url(World_of_Wikipedia_by_Jon_Robson_-_colored_version.png);
+    background-size: cover;
+    font-family: Akronim;
+}
+header {
+    font-size: 500%;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 30vw;
+    text-align: center;
+    margin: auto;
+    margin-top: 5%;
+    border-radius: 10%;
+    border: 3px solid black;
+    padding: 10px;
+}
+.search {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 25vw;
+    display: block;
+    margin: auto;
+    margin-top: 3%;
+    border-radius: 10%;
+    border: 3px solid black;
+    text-align: center;
+    margin-bottom: 3%;
+    padding: 2%;
+}
+#text {
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 5px 15px;
+    font-family: Laila;
+    font-size: 14px;
+    color: #666;
+    border: 1px solid #0076a3;
+    border-top-left-radius: 5px 5px;
+    border-bottom-left-radius: 5px 5px;
+}
+#button {
+    padding: 5px;
+    font-family: Laila;
+    font-size: 14px;
+    font-weight: bold;
     outline: none;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     color: #ffffff;
-    border: solid 1px #0076a3; border-right:0px;
-background: #00adee;
-
-
+    border: solid 1px #0076a3;
+    border-right: 0px;
+    background: #00adee;
     border-top-right-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
-  }
-	#button:hover {
-		text-decoration: none;
-		background-color: #007ead;
-	}
+}
+#button:hover {
+    text-decoration: none;
+    background-color: #007ead;
+}
+#random {
+    font-family: Akronim;
+    font-size: 200%;
+    text-decoration: none;
+    color: black;
+}
+.result {
+    background-color: rgba(255, 255, 255, 0.9);
+    font-family: Laila, sans-serif;
+    font-size: 150%;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 1%;
+    border-radius: 8%;
+    border: 3px solid black;
+padding: 1%;
+}
+p {
+    font-size: 75%;
+margin: auto;
+}
